# netbox_textdatastore

./: MANIFEST.in  README.md  pyproject.toml
netbox_textdatastore/: __init__.py  filtersets.py  forms.py  models.py  navigation.py  tables.py  template_content.py  urls.py  views.py
netbox_textdatastore/api/: serializers.py  urls.py  views.py
netbox_textdatastore/migrations/: 0001_initial.py  0002_alter_textdataobject_custom_field_data.py
netbox_textdatastore/templates/netbox_textdatastore/: device_incl.html  textdataobject.html
