[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox_textdatastore"
version = "0.0.2"
authors = [
    { name="shrank", email="info@murxs.ch" },
]
license = { file = "LICENSE" }
readme = "README.md"
description = "NAPALM module for Netgear switches"
requires-python = ">=3.0"
classifiers = [
   "Programming Language :: Python :: 3",
   "Operating System :: OS Independent",
]
keywords = ["network", "automation", "netbox"]
dependencies = [
]

[tool.setuptools.packages]
find = {}

[project.urls]
Homepage = "https://github.com/shrank/netbox_textdatastore"